--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -304,7 +304,7 @@ deploy:
   script:
     - cp /home/sysadm/factory-monitoring/api-gateway/src/main/resources/application.yml api-gateway/src/main/resources/application.yml
     - cp /home/sysadm/factory-monitoring/api-gateway/src/main/resources/keystore.p12 api-gateway/src/main/resources/keystore.p12
-    - cp /home/sysadm/factory-monitoring/config/* config
+    - cp -r /home/sysadm/factory-monitoring/config ./
     - docker-compose build
     - docker-compose up -d
   rules:
